feat(http-client): add CDI provider and priority-ordered factory fallback (#1071)
- extras/http-client-cdi: CdiA2AHttpClientProvider at priority 200 resolves
  a user-provided A2AHttpClient bean from CDI; falls back gracefully when no
  container is active or no unambiguous bean is found
- A2AHttpClientFactory now sorts providers at class init and iterates in order,
  catching exceptions per-provider; create(String) reuses the cached list
  instead of reloading ServiceLoader on each call
- tests use Weld SE SeContainerInitializer (no mocks) covering all four paths:
  bean present, no bean, ambiguous, no CDI container
- update A2AHttpClientProvider Javadoc with full four-tier priority table
- fix VertxA2AHttpClientProvider Javadoc and rename log field to LOGGER

Signed-off-by: Emmanuel Hugonnet <ehugonne@redhat.com>